# how-long-to-beat

./: .env.example  .gitignore  Cargo.toml  LICENSE.md  README.md
src/: main.rs  variables.rs
src/handlers/: inline_query.rs  mod.rs
src/parser/: html_parser.rs  http_requster.rs  main.rs  mod.rs  response_to_string.rs
src/types/: bot.rs
src/utils/: number.rs
