[package]
name = "how_long_to_beat"
version = "0.0.3"
edition = "2021"

[dependencies]
dotenvy = "0.15.1"
hyper = { version = "0.14.19", features = ["full"] }
hyper-tls = "0.5.0"
once_cell = "1.12.0"
scraper = "0.13.0"
teloxide = { version = "0.9", features = ["macros", "auto-send", "throttle"] }
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
